--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "novaphp/config",
     "description": "NovaPhp Config",
+    "homepage": "https://github.com/emirustaoglu",
     "version": "1.0.0",
     "type": "library",
     "license": "MIT",
@@ -16,5 +17,7 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": ">=8.3.0"
+    }
 }
